Integrate backend data calculation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uncertainty Lab | Computational Laboratory for Mathematical Finance</title>
     <meta name="description" content="A computational laboratory for mathematical finance, volatility surfaces, and uncertainty modelling. Research tools for implied volatility, kernel regression, and Monte Carlo methods." />
-    <meta name="author" content="Angus" />
+    <meta name="author" content="Angus Ng" />
     <meta name="keywords" content="volatility surface, implied volatility, mathematical finance, kernel regression, Monte Carlo, option pricing, SVI, Black-Scholes, research" />
 
     <meta property="og:title" content="Uncertainty Lab" />
